fix: spec overflows, dropshadows, and resizer issues

--- a/npm/design-system/src/components/SpecList/SpecList.module.scss
+++ b/npm/design-system/src/components/SpecList/SpecList.module.scss
@@ -3,6 +3,13 @@
 .nav {
   user-select: none;
   white-space: nowrap;
+
+  > .ul {
+    height: 100%; // capture a11y focus
+    // don't hide the a11y box outline for the tree
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+  }
 }
 
 .ul {
